--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,11 @@
 body {
   background-color: yellowgreen;
 }
+#image {
+  background-image: url("../images/Candy.jpeg");
+  width: 425px;
+  height: 567px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
